--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#1a73e8" />
+    <meta name="description" content="EduPath Advisor: quizzes, course-to-career maps, colleges nearby, timelines, and scholarships in one place." />
+    <meta property="og:title" content="EduPath Advisor" />
+    <meta property="og:description" content="Plan your path with clarity and confidence." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-vercel-domain.vercel.app/" />
+    <meta property="og:image" content="/og-image.png" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <title>EduPath Advisor</title>
   </head>
